feat(test): refactor TicketServiceTest with DataFactory and AssertJ